# stacksat128

./: .gitignore  Cargo.toml  EXECUTION_PLAN.md  README.md  STACKSAT_STATUS.md  specification.md  stacksat128_abc_logs.txt  stacksat128_empty_logs.txt
.github/workflows/: test.yml
benches/: vs_sha256_and_blake3.rs
crates/stacksat128/: Cargo.toml
crates/stacksat128/benches/: hashing_benchmark.rs
crates/stacksat128/src/: lib.rs
crates/stacksat128/tests/: avalanche.rs
crates/stacksat128_bitcoin/: Cargo.toml
crates/stacksat128_bitcoin/src/: lib.rs  stacksat_script.rs
docs/: direct_bitcoin_script_optimisations.md  performance_optimisations_analysis.md
examples/: basic.rs  test_vectors.rs
src/: diffusion.rs  lib.rs
test_vectors/: basic_test_vector.json
tests/: integration.rs
