[package]
name = "stacksat128"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A 256-bit cryptographic hash function optimized for Bitcoin Script environments"
authors = ["@AbdelStark"]
repository = "https://github.com/AbdelStark/stacksat128"
readme = "README.md"
keywords = ["cryptography", "hash", "bitcoin", "script", "sponge"]
categories = ["cryptography", "algorithms", "no-std"]
rust-version = "1.60"

[dependencies]
# Provides Vec for no_std environments
heapless = "0.8"

[dev-dependencies]
blake3 = "1.8.2"
criterion = "0.5.1"
# Used only for printing digests in tests/examples
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.6.0"

[[bench]]
name = "vs_sha256_and_blake3"
harness = false

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallelism for better optimization
opt-level = 3     # Optimize for speed (default for release)
strip = true      # Strip symbols from binary
panic = 'abort'   # Abort on panic for smaller binary size (no unwinding)
