[package]
name = "stacksat128_bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
stacksat128 = { path = "../stacksat128" }
bitvm = { git = "https://github.com/BitVM/BitVM", rev = "79eccd9" }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin = { version = "0.32.5", features = ["rand-std"] }
bitcoin_hashes = "0.16.0"
strum = "0.27"
strum_macros = "0.27"
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec" }
serde = { version = "1.0.197", features = ["derive"] }
num-traits = "0.2.18"
ark-bn254 = { version = "0.5.0", features = [
    "curve",
    "scalar_field",
], default-features = false }
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client" }
serde_json = "1.0.116"
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack" }
serde-big-array = "0.5.1"
num-bigint = { version = "0.4.4", features = ["rand"] }
ark-std = { version = "0.5.0", default-features = false, features = [
    "print-trace",
] }
ark-crypto-primitives = { version = "0.5.0", features = ["snark", "sponge"] }
ark-relations = "0.5.0"
lazy_static = "1.5.0"
itertools = "0.14.0"
hex = "0.4.3"
